class PhysicsManager {
public:
    PhysicsManager();
    void startPhysicsEngine();

private:
};
